# Charlotte-v2

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  PRIVACY_POLICY.md  README.md  docker-compose.yml  entrypoint.sh  fix_cache.py  main.py  nginx.conf  playlist.json  promtail-config.yml  pyproject.toml  requirements.bot.txt  requirements.txt  requirements.worker.txt
.github/: FUNDING.yml
alembic/: env.py
alembic/versions/: 1a6bb4012e25_add_lossless_mode_to_user_settings.py  29a1dbeaa300_.py  4b154c4760db_remove_usersettings_and_chatsettings.py  a8311dee8ec2_add_cache_key.py  b3e255e6138e_ban.py  b8669ea8a40b_make_premium_ends_nullable.py  f562e1e476c2_create_payments_table.py
bot/: main.py
bot/handlers/: playlist.py  start.py  universal.py  youtube.py
core/: bot_commands.py  config.py  dependencies.py  error_handler.py  loader.py  logger.py  utils.py
handlers/: __init__.py  admin.py  cancel.py  help.py  premium.py  settings.py  start.py
locales/be/: error.ftl  inline.ftl  misc.ftl  service.ftl  settings.ftl  txt.ftl  youtube.ftl
locales/cs/: error.ftl  inline.ftl  misc.ftl  service.ftl  settings.ftl  txt.ftl  youtube.ftl
locales/de/: error.ftl  inline.ftl  misc.ftl  service.ftl  settings.ftl  txt.ftl  youtube.ftl
locales/en/: error.ftl  inline.ftl  misc.ftl  service.ftl  settings.ftl  txt.ftl  youtube.ftl
locales/es/: error.ftl  inline.ftl  misc.ftl  service.ftl  settings.ftl  txt.ftl  youtube.ftl
locales/fa/: error.ftl  inline.ftl  misc.ftl  service.ftl  settings.ftl  txt.ftl  youtube.ftl
locales/pl/: error.ftl  inline.ftl  misc.ftl  service.ftl  settings.ftl  txt.ftl  youtube.ftl
locales/ru/: error.ftl  inline.ftl  misc.ftl  service.ftl  settings.ftl  txt.ftl  youtube.ftl
middlewares/: admin_check.py  ban_check.py  button_owner.py  db.py  force_edit_show_mode.py  i18n.py  rate_limiter.py  reaction.py  service_block.py  service_use.py  statistics.py
models/: error_models.py  errors.py  media.py  media_cache.py  media_models.py  metadata.py  service_list.py  settings.py
modules/: __init__.py  base_service.py  router.py
sender/: message_sender.py
senders/: media_sender.py
states/: __init__.py  news.py  support.py  youtube.py
storage/: repository.py
tasks/: scheduled.py  task_manager.py
utils/: __init__.py  arq_pool.py  download_utils.py  error_messages.py  file_utils.py  hash_utils.py  i18n.py  service_utils.py  statistics_helper.py  text_utils.py  tidal.py  time_utils.py  url_cache.py  url_validator.py  user_agents.py
workers/: Dockerfile  __init__.py  entrypoint.sh  heavy_worker.py  light_worker.py
(+119 files in other folders)
