[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [""]
exclude = ["logs*", "storage*", "temp*", "tests*", "backups*"]

[project]
name = "charlotte"
version = "1.0.0"
requires-python = ">=3.11"

# Core
dependencies = [
    "aiofiles",
    "curl_cffi==0.15.0",
    "Pillow==12.2.0"
]

# Specific
[project.optional-dependencies]
bot = [
    "aiogram[i18n]==3.28.0",
    "fluentogram==1.2.1",
    "python-dotenv==1.2.2",
    "sqlalchemy==2.0.49",
    "asyncpg==0.31.0",
    "greenlet==3.4.0",
    "redis~=5.3.1",
    "fluentogram==1.2.1",
    "alembic==1.18.4",
    "translators~=6.0.1",
    "ytmusicapi==1.12.0",
    "aiogram-dialog~=2.1.0",
]

# Dev
[dependency-groups]
dev = [
    "ruff",
    "mypy",
]