[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [""]
exclude = ["logs*", "storage*", "temp*", "tests*", "backups*"]

[project]
name = "charlotte"
version = "1.0.0"
requires-python = ">=3.11"

# Core
dependencies = [
    "aiofiles",
    "curl_cffi==0.15.0"
]

# Specific
[project.optional-dependencies]
bot = [
    "aiogram[i18n]==3.29.1",
    "fluentogram==1.2.1",
    "python-dotenv==1.2.2",
    "sqlalchemy==2.0.51",
    "asyncpg==0.31.0",
    "greenlet==3.5.3",
    "redis~=8.0.1",
    "fluentogram==1.2.1",
    "alembic==1.18.5",
    "translators~=6.0.1",
    "aiogram-dialog~=2.6.0",
]

# Dev
[dependency-groups]
dev = [
    "ruff",
    "mypy",
]